--- a/product/templates/categories/detail.html
+++ b/product/templates/categories/detail.html
@@ -1,4 +1,4 @@
-{% extends "index/base.html" %}
+{% extends "home/base.html" %}
 {% block content %}
 <div class="container mt-3">
     <h2>Detalles de Categoria</h2>
@@ -6,8 +6,10 @@
         <div class="card-body">
             <h5 class="card-title"> {{category.name}}</h5>
         
-            <a href="{% url 'category_update' category.id %}" class="btn btn-primary">Editar</a>
-            <a href="{% url 'category_delete' category.id %}" class="btn btn-danger">Borrar</a>
+            {% if user.is_authenticated %}
+                        <a href="{% url 'product_update' product.id %}" class="btn btn-success btn-sm">Editar</a>
+                        <a href="{% url 'product_delete' product.id %}" class="btn btn-danger btn-sm">Eliminar</a>
+                    {% endif %}
             <a href="{% url 'category_list' %}" class="btn btn-secondary">Volver a la lista</a>
         </div>
     </div>
