--- a/product/templates/products/detail.html
+++ b/product/templates/products/detail.html
@@ -1,4 +1,4 @@
-{% extends "index/base.html" %}
+{% extends "home/base.html" %}
 {% block content %}
 <div class="container mt-3">
     <h2>Detalles del Producto</h2>
@@ -9,11 +9,12 @@
             <p class="card-text"><strong>Precio:</strong> {{ product.price }}</p>
             <p class="card-text"><strong>Categoría:</strong> {{ product.category.name }}</p>
             <p class="card-text"><strong>Stock:</strong> {{ product.stock }}</p>
-            <a href="{% url 'product_update' product.id %}" class="btn btn-primary">Editar</a>
-            <a href="{% url 'product_delete' product.id %}" class="btn btn-danger">Borrar</a>
+            {% if user.is_authenticated %}
+                        <a href="{% url 'product_update' product.id %}" class="btn btn-success btn-sm">Editar</a>
+                        <a href="{% url 'product_delete' product.id %}" class="btn btn-danger btn-sm">Eliminar</a>
+                    {% endif %}
             <a href="{% url 'product_list' %}" class="btn btn-secondary">Volver a la lista</a>
         </div>
     </div>
 </div>
 {% endblock %}
- 
