--- a/product/templates/products/list.html
+++ b/product/templates/products/list.html
@@ -1,8 +1,22 @@
-{% extends "index/base.html" %}
+{% extends "home/base.html" %}
 {% block content %}
 <div class="container mt-3">
-    <h2>Lista de Productos</h2>
-    <a href="{% url 'product_create' %}" class="btn btn-primary mb-3">Crear Producto</a>
+    <h2> Lista de Productos</h2>
+    <a href="{% url 'product_create' %}" class="btn btn-primary">Crear Producto</a>
+    <h2 class="mb-0">Productos por Stock</h2>
+    <form method="GET" action="{% url 'product_gte_stock_list' %}" class="form-inline mb-3">
+        {% csrf_token %}
+        <div class="form-group mr-2">
+            <label for="min_stock">Mínimo:</label>
+            <input type="number" id="min_stock" name="min_stock" class="form-control mx-sm-2" placeholder="Mínimo">
+        </div>
+        <div class="form-group mr-2">
+            <label for="max_stock">Máximo:</label>
+            <input type="number" id="max_stock" name="max_stock" class="form-control mx-sm-2" placeholder="Máximo">
+        </div>
+        <button type="submit" class="btn btn-primary">Buscar</button>
+    </form>
+    {% if products %}
     <table class="table table-striped">
         <thead>
             <tr>
@@ -24,12 +38,17 @@
                 <td>{{ product.stock }}</td>
                 <td>
                     <a href="{% url 'product_detail' product.id %}" class="btn btn-info btn-sm">Detalles</a>
-                    <a href="{% url 'product_update' product.id %}" class="btn btn-success btn-sm">Editar</a>
-                    <a href="{% url 'product_delete' product.id %}" class="btn btn-danger btn-sm">Eliminar</a>
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'product_update' product.id %}" class="btn btn-success btn-sm">Editar</a>
+                        <a href="{% url 'product_delete' product.id %}" class="btn btn-danger btn-sm">Eliminar</a>
+                    {% endif %}
                 </td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
+    {% else %}
+    <p>No se encontraron productos con el stock especificado.</p>
+    {% endif %}
 </div>
 {% endblock %}
